hw5_lab8/tests/errors/sem_type_mismatch_decl.kt
// EXPECT: semantic error — Boolean initialised with Int
fun main() {
    var flag: Boolean = 42
}
